<resources>
    <string name="app_name">Project S</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signIn">Sign in</string>
    <string name="action_forgotPass">Forgot Password</string>

    <string name="sign_in_label">Sign in or Sign up</string>
    <string name="btn_google_sign_in">Using G-Mail</string>
    <string name="btn_email_sign_in">Sign In</string>
    <string name="btn_email_sign_up">Sign Up</string>
    <string name="btn_submit">Submit</string>

    <string name="edt_sign_in_email">Email</string>
    <string name="edt_sign_in_password">Password</string>

    <string name="edt_fogPass_email">Enter Your Email Address</string>

    <string name="edt_or">or</string>

    <!-- Fragment Profile Setup String Values -->
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="id_number">ID Number</string>
    <string name="create_pro">Update Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>

    <string name="action_settings">Settings</string>

    <!--Navigation menu items string texts -->
    <string name="nav_accom">Accommodation</string>
    <string name="nav_travel">Transport</string>
    <string name="nav_food">Catering</string>
    <string name="nav_clothes">Clothing</string>
    <string name="nav_deco">Decor</string>
    <string name="nav_cakes">Cakes</string>
    <string name="nav_misc">Miscellaneous</string>

    <string name="nav_edt_event">Edit Event</string>
    <string name="nav_share">Share</string>
    <string name="nav_update">Update Profile</string>
    <string name="nav_sign">Sign In</string>

    <!--Update profile activity -->
    <string name="h_fname">First Name</string>
    <string name="h_lname">Last Name</string>
    <string name="h_DOB">u_DOB</string>
    <string name="h_gender">Gender</string>

    <!-- New event button next -->
    <string name="next">Next</string>
    <string name="title_activity_events_details">EventsDetailsActivity</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_add_new_event_to_db">AddNewEventToDBActivity</string>

    <!-- Spinner values -->
    <string-array name="services">
        <item>Select event type</item>
        <item>Accomodation</item>
        <item>Transport</item>
        <item>Cakes</item>
        <item>Catering</item>
        <item>Decor</item>
        <item>Clothing</item>
    </string-array>

    <string name="cr_ev_name">Event Name</string>
    <string name="cr_ev_desc">Event Description</string>
    <string name="title_activity_event_list">EventListActivity</string>

    <!-- Card menu -->
    <string name="card_menu">Select Services</string>

    <!--Edit Events -->
    <string name="edt_evName">Event Name</string>
    <string name="edt_evDesc">Event Description</string>

</resources>
