<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/frag_horizontal_margin"
             android:paddingRight="@dimen/frag_horizontal_margin"
             android:paddingTop="@dimen/frag_vertical_margin"
             tools:context="layout.SignIn"
             android:background="@drawable/img_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingLeft="@dimen/lin_lay_pad_left"
            android:paddingRight="@dimen/lin_lay_pad_right"
            android:paddingBottom="5dp"
            android:background="@color/colorMainLayoutTint">


            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_title"
                android:fontFamily="cursive"
                android:textSize="50dp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_logEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_user_35dp"
                    android:hint="@string/edt_sign_in_email"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/btn_email_sign_in"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="18dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_logPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:inputType="textPassword"
                    android:hint="@string/edt_sign_in_password"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/edt_sign_in_email"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_email_sign_in"
                android:drawableLeft="@drawable/ic_mail_48dp"
                android:text="@string/btn_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:background="@color/colorButtonBackground"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/btn_google_sign_in"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/btn_google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:background="@color/colorButtonBackground"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edt_or"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:layout_marginTop="16dp"/>

            <View
                android:id="@+id/line_sep"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/edt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_email_sign_up"
                android:layout_gravity="center"
                android:clickable="true"
                android:textColor="#000000"
                android:paddingTop="16dp"/>



            <TextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_forgotPass"
                android:layout_gravity="center"
                android:clickable="true"
                android:textColor="#000000"
                android:paddingTop="20dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
