<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/frag_vertical_margin"
            android:paddingLeft="@dimen/frag_horizontal_margin"
            android:paddingRight="@dimen/frag_horizontal_margin"
            android:paddingTop="@dimen/frag_vertical_margin"
            tools:context="layout.ProfileSetup"
            android:background="@drawable/img_background">

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingLeft="@dimen/lin_lay_pad_left"
            android:paddingRight="@dimen/lin_lay_pad_right"
            android:paddingBottom="5dp"
            android:background="@color/colorMainLayoutTint">

            <ImageButton
                android:id="@+id/img_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_48dp"/>


            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@android:id/title"
                android:fontFamily="cursive"
                android:textSize="50dp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pro_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_pro_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user_35dp"
                    android:inputType="textPersonName"
                    android:hint="@string/f_name"
                    android:gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="18dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pro_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_pro_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:inputType="textPersonName"
                    android:hint="@string/l_name"
                    android:gravity="center_horizontal"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdg_gender"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbd_male"
                    android:text="@string/gender_male"
                    android:layout_marginRight="45dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbd_female"
                    android:text="@string/gender_female"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pro_idNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_pro_idNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="13"
                    android:hint="@string/id_number"
                    android:gravity="center_horizontal"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_create_pro"
                android:drawableLeft="@drawable/ic_add_48dp"
                android:text="@string/create_pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:background="@color/colorButtonBackground"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"/>


        </LinearLayout>


    </FrameLayout>


</ScrollView>
