<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="za.co.devj.projectsv2.UpdateProfileActivity"
    tools:showIn="@layout/activity_update_profile"
    android:background="@drawable/img_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pro_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_pro_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/f_name"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentStart="true"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pro_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_pro_fname"
                android:layout_marginTop="18dp">

                <EditText
                    android:id="@+id/edt_pro_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/l_name"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdg_gender"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:layout_below="@id/til_pro_lname">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbd_male"
                    android:text="@string/gender_male"
                    android:layout_marginRight="45dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbd_female"
                    android:text="@string/gender_female"/>

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="u_DOB"
                android:id="@+id/dob_title"
                android:textSize="20dp"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/rdg_gender"/>
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_gravity="center"
                android:layout_below="@id/dob_title"/>

            <Button
                android:id="@+id/btn_create_pro"
                android:text="@string/create_pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/datePicker"/>

        </RelativeLayout>


    </ScrollView>

</android.support.v4.widget.NestedScrollView>
